[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/bin/day 1/main.rs"


[[bin]]
name = "day2"
path = "src/bin/day 2/main.rs"

[[bin]]
name = "day3"
path = "src/bin/day 3/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
